Stopped footer logo jumping on hover

--- a/css/awesome.css
+++ b/css/awesome.css
@@ -492,20 +492,20 @@ footer {
       footer .footer-links li a.top:hover:before {
         background: url("../images/footer-top-p.svg") no-repeat center center; }
   footer div.logo {
-    border-bottom: rgba(255, 0, 102, 0) solid 8px;
+    height: 128px;
+    width: 120px;
+    margin-right: 10%;
+    border-bottom: 8px solid transparent;
     background-clip: padding-box;
     margin-bottom: -8px;
     justify-self: end;
     align-self: end;
-    margin-right: 10%;
     background-color: rgba(255, 0, 102, 0.6);
-    height: 128px;
-    width: 120px;
     position: relative;
     transition: all 0.4s linear; }
     footer div.logo:hover {
       background-color: #ff0066;
-      border-bottom: #ff0066; }
+      border-bottom: 8px solid #ff0066; }
     footer div.logo a {
       position: absolute;
       top: 15px;
